# AgentCortana-App

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_SMOKE.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rescue_act.sh  ruff.toml  setup_agent_local.sh
.github/workflows/: build-image.yml  ci.yml  pre-commit.yml  preflight.yml  release.yml
agent-local/: .dockerignore  Dockerfile  compose.override.yml  compose.yml  requirements.txt
agent-local/.github/workflows/: build-image.yml
agent-local/agent_app/app/: main.py
agent-local/app/: app.py  observability.py
agent-local/app/routers/: act.py  meta.py
app/: __init__.py  app.py  app.py.bak.1758733346  main.py  observability.py  version.py
app/middleware/: ratelimit.py
app/routers/: act.py  echo.py  health.py  introspect.py
db/init/: 001_schema.sql
docs/: Msa-seav0.md
scripts/: db-backup.sh  db-restore.sh  dev-down.sh  dev-up.sh  obj-backup.sh  obj-restore.sh
tests/: test_act.py  test_act_logic.py  test_act_stream.py  test_echo.py  test_introspect.py  test_logging_config.py  test_meta.py  test_rate_limit.py
