[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcortana_app"
version = "0.0.0"
description = "AgentCortana App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1"
]

# Uwaga: brak sekcji [tool.setuptools.package-dir] i packages.find/where=src
# -> flat layout (pakiety odkrywane z root)
